automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -45,7 +45,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Regression is any algorithm that numerical/quantifiable i.e.  that is an integer or float i.e. quantifiable and Classification"
+    "#Regression is any algorithm that numerical/quantifiable i.e. an integer or float and Classification"
    ]
   },
   {
