--- a/index.ipynb
+++ b/index.ipynb
@@ -45,7 +45,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Regression is any algorithm that numerical/quantifiable i.e. an integer or float and Classification is any algorithm that is a categorical vari"
+    "#Regression is any algorithm that numerical/quantifiable i.e. an integer or float and Classification is any algorithm that is a categorical variable such as gender, ag"
    ]
   },
   {
