automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -93,7 +93,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Clustering"
+    "#Clustering algorithms"
    ]
   },
   {
@@ -109,7 +109,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your response here"
+    "# Di"
    ]
   }
  ],
