automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -13,7 +13,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#It is the ability of any computer to build predictive models using  "
+    "#It is the ability of any computer to build predictive models using structure of data t "
    ]
   },
   {
