automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -13,7 +13,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#It is the ability of any computer to build predictive models using structure of data that can "
+    "#It is the ability of any computer to build predictive models that can generalize using structure of data that can "
    ]
   },
   {
