automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -13,7 +13,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#It is the ability of any computer to build predictive models that can generalize structure of data that can then "
+    "#It is the ability of any computer to build predictive models that can generalize structure of data that can then be used for future cases"
    ]
   },
   {
